--- a/src/domain.html
+++ b/src/domain.html
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="/util.js"></script>
   </head>
   <body>
-    <form onsubmit="createApp(); return false;">
+    <form id="form">
       <label for="domain">Instance domain:</label>
       <input id="domain" name="domain" type="url" required />
       <button type="submit">Continue</button>
@@ -32,6 +32,14 @@
   <script>
     document.getElementById("domain").value =
       localStorage.getItem("instanceDomain");
+    document.getElementById("domain").focus();
+
+    document.getElementById("form").addEventListener("submit", function (e) {
+      e.preventDefault();
+      localStorage.setItem("instanceDomain", document.getElementById("domain").value);
+      createApp();
+      return false;
+    });
   </script>
   <script type="text/javascript" src="/auth.js"></script>
 </html>
