--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,8 @@
     <script type="text/javascript" src="/util.js"></script>
     <style>
       body {
-        margin-inline: 20%;
+        margin-left: 20%;
+        margin-right: 20%;
       }
     </style>
   </head>
@@ -60,7 +61,7 @@
     </p>
     <ul>
       <li>All versions of Chrome, its derivatives, and pre-Chromium Edge</li>
-      <li>Safari 4+</li>
+      <li>Safari 4+ (<strong>Confirmed working on Safari 5.1.10</strong>)</li>
       <li>Firefox 3.5+</li>
       <li>Internet Explorer 8+</li>
     </ul>
