--- a/src/notifications.html
+++ b/src/notifications.html
@@ -128,6 +128,7 @@
   <body>
     <div id="header">
       <h3>Notifications</h3>
+      &nbsp;
       <button onclick="readAll()">Read</button>
       <button onclick="window.location.href = '/notifications.html'">
         Refresh
