--- a/src/deck-nav.html
+++ b/src/deck-nav.html
@@ -28,6 +28,7 @@
     <a href="/timelines/federated.html" target="content">Federated</a>
     <br />
     <div id="sacrifice"></div>
+    <a href="/bookmarks.html" target="content">Bookmarks</a>
     <a
       href="#"
       onclick="if(confirm('Are you sure you want to log out?')){logOut()}"
