--- a/src/index.html
+++ b/src/index.html
@@ -63,10 +63,18 @@
       <li>All versions of Chrome, its derivatives, and pre-Chromium Edge</li>
       <li>Safari 4+ (<strong>Confirmed working on Safari 5.1.10</strong>)</li>
       <li>Firefox 3.5+</li>
-      <li>Internet Explorer 8+</li>
+      >Internet Explorer 8+(<strong>Confirmed working on IE11 on Windows 10 21H2</strong>)
     </ul>
     <button onclick="window.location.href = '/login.html';">Log In</button>
     <br />
+    <br />
+    <div style="font-size: 0.8em">
+      A
+      <a href="https://bomberfish.ca" target="_blank">BomberFish Industries</a>
+      project.<br /><a target="_blank" href="https://github.com/BomberFish/Mammut"
+        >View the source code.</a
+      >
+    </div>
     <br />
     <a
       class="subdued"
