--- a/src/deck.html
+++ b/src/deck.html
@@ -13,47 +13,34 @@
     <meta name="color-scheme" content="light dark" />
     <title>Mammut - Deck</title>
     <link rel="stylesheet" href="/style.css" />
+    <script>
+      window.onload = function() {
+        if (
+          localStorage.getItem("client_id") == null ||
+          localStorage.getItem("client_secret") == null ||
+          localStorage.getItem("auth_code") == null ||
+          localStorage.getItem("access_token") == null
+        ) {
+          window.location.href = "/domain.html";
+        }
+        window.addEventListener("message", function (e) {
+          console.log("[DECK]", e);
+          if (e.data.type == "timeline-update-request") {
+            document
+              .getElementById("content")
+              .contentWindow.postMessage({ type: "timeline-update-request" }, "*");
+          }
+        });
+      };
+    </script>
   </head>
 
-  <frameset cols="10%, *, 25%" BORDERCOLOR="#00000000">
+  <frameset cols="10%, *, 25%" bordercolor="#fdfdff" framespacing="0">
     <frame src="/deck-nav.html" id="nav" />
     <frame src="/timelines/following.html" name="content" id="content" />
-    <frameset id="rightmost" rows="40%,*">
+    <frameset id="rightmost" rows="40%,*" bordercolor="#fdfdff" framespacing="0">
       <frame src="/compose.html" name="compose" id="compose" />
       <frame src="/notifications.html" id="notifications" />
     </frameset>
   </frameset>
-  <script>
-    if (
-      localStorage.getItem("client_id") == null ||
-      localStorage.getItem("client_secret") == null ||
-      localStorage.getItem("auth_code") == null ||
-      localStorage.getItem("access_token") == null
-    ) {
-      window.location.href = "/domain.html";
-    }
-
-    function fixSizing() {
-      if (window.clientWidth < 800) {
-        document.getElementById("rightmost").remove();
-      }
-
-      if (window.clientHeight > window.clientWidth) {
-        document.getElementsByTagName("frameset")[0].removeAttribute("cols");
-        document
-          .getElementsByTagName("frameset")[0]
-          .setAttribute("rows", "10%, *, 25%");
-      }
-    }
-    window.addEventListener("resize", fixSizing);
-    window.onload = fixSizing;
-    window.addEventListener("message", function (e) {
-      console.log("[DECK]", e);
-      if (e.data.type == "timeline-update-request") {
-        document
-          .getElementById("content")
-          .contentWindow.postMessage({ type: "timeline-update-request" }, "*");
-      }
-    });
-  </script>
 </html>
