--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
       <li>All versions of Chrome, its derivatives, and pre-Chromium Edge</li>
       <li>Safari 4+ (<strong>Confirmed working on Safari 5.1.10</strong>)</li>
       <li>Firefox 3.5+</li>
-      >Internet Explorer 8+(<strong>Confirmed working on IE11 on Windows 10 21H2</strong>)
+      <li>Internet Explorer 8+ (<strong>Confirmed working on IE11 on Windows 10 21H2</strong>)
     </ul>
     <button onclick="window.location.href = '/login.html';">Log In</button>
     <br />
