--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,19 @@
           width: 100%;
           padding: 0.8em
       }
+
+      @media (orientation: portrait) {
+        #content {
+          margin-left: 5%;
+          margin-right: 5%;
+          width: 90%;
+        }
+
+        footer {
+          position: static;
+          margin-top: 1em;
+        }
+      }
     </style>
   </head>
   <body>
