fix homepage stuff

--- a/src/index.html
+++ b/src/index.html
@@ -68,17 +68,18 @@
         </p>
         <h2>Features</h2>
         <ul>
-        <li>Lightweight UI</li>
-        <li>
-            High compatibility – designed for browsers made in 2010 and newer.
-        </li>
-        <li>View your timelines</li>
-        <li>Create posts, and upload attachments</li>
-        <li>View and follow users</li>
-        <li>Interact with other posts: Like, Boost and Reply!</li>
-        <li>View your notifications</li>
-        <li>React to posts</li>
+            <li>Lightweight UI</li>
+            <li>
+                High compatibility – designed for browsers made in 2010 and newer.
+            </li>
+            <li>View your timelines</li>
+            <li>Create posts, and upload attachments</li>
+            <li>View and follow users</li>
+            <li>Interact with other posts: Like, Boost and Reply!</li>
+            <li>View your notifications</li>
+            <li>React to posts</li>
         </ul>
+
         <h2>Browser Compatibility</h2>
         <p>
         Mammut targets the following browser versions. <br />Note that this is
@@ -87,10 +88,10 @@
         <strong>will</strong> vary.
         </p>
         <ul>
-        <li>All versions of Chrome, its derivatives, and pre-Chromium Edge</li>
-        <li>Safari 4+ (<strong>Confirmed working on Safari 5.1.10</strong>)</li>
-        <li>Firefox 3.5+</li>
-        <li>Internet Explorer 8+ (<strong>Confirmed working on IE11 on Windows 10 21H2</strong>)
+            <li>All versions of Chrome, its derivatives, and pre-Chromium Edge</li>
+            <li>Safari 4+ (<strong>Confirmed working on Safari 5.1.10 on OS X 10.6.8</strong>)</li>
+            <li>Firefox 3.5+</li>
+            <li>Internet Explorer 8+ (<strong>Confirmed working on IE11 on Windows 10 21H2</strong>)</li>
         </ul>
         <button onclick="window.location.href = '/login.html';">Log In</button>
     </div>
