add bookmarks to non-deck

--- a/src/index.html
+++ b/src/index.html
@@ -60,6 +60,13 @@
         height: auto;
         border-radius: 1em;
       }
+
+      @media (orientation: portrait) {
+          body {
+              margin-left: 5%;
+                margin-right: 5%;
+          }
+      }
     </style>
   </head>
   <body>
