remove references to empty function

--- a/src/index.html
+++ b/src/index.html
@@ -62,10 +62,10 @@
       }
 
       @media (orientation: portrait) {
-          body {
-              margin-left: 5%;
-                margin-right: 5%;
-          }
+        body {
+          margin-left: 5%;
+          margin-right: 5%;
+        }
       }
     </style>
   </head>
@@ -120,8 +120,13 @@
       <div id="video"></div>
       <footer>
         <div style="font-size: 0.8em; margin-bottom: 0.5em">
-          Made with ❤️ in 🇨🇦 by&nbsp;<a href="https://bomberfish.ca" target="_blank">BomberFish</a>.
-          <br /><a target="_blank" href="https://github.com/BomberFish/Mammut"
+          Made with ❤️ in 🇨🇦 by&nbsp;<a
+            href="https://bomberfish.ca"
+            target="_blank"
+            >BomberFish</a
+          >. <br /><a
+            target="_blank"
+            href="https://github.com/BomberFish/Mammut"
             >View the source code.</a
           >
         </div>
