--- a/src/search.html
+++ b/src/search.html
@@ -114,7 +114,7 @@
     <div id="header">
       <h1>Search</h1>
       <form id="searchAgain">
-          <input type="text" id="search" name="q" placeholder="Search..." />
+          <input type="text" id="search" name="q" placeholder="Search..." required/>
           <button type="submit">Search</button>
       </form>
     </div>
