add some meta tags

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,12 @@
       name="description"
       content="A minimalistic, lightweight Mastodon client written in vanilla JS."
     />
+    <meta name="keywords" content="Mastodon, client, web, app, social, media, fediverse" />
+    <meta name="robots" content="index, follow" />
+    <!-- thumbnail -->
+    <meta property="og:image" content="/assets/hero.jpeg" />
+    <meta property="og:image:alt" content="A screenshot of Mammut." />
+    <meta property="og:image:type" content="image/jpeg" />
     <title>Mammut</title>
     <link rel="stylesheet" href="style.css" />
     <script>
