--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,8 @@
     />
     <meta name="keywords" content="Mastodon, client, web, app, social, media, fediverse" />
     <meta name="robots" content="index, follow" />
-    <!-- thumbnail -->
     <meta property="og:image" content="/assets/hero.jpeg" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta property="og:image:alt" content="A screenshot of Mammut." />
     <meta property="og:image:type" content="image/jpeg" />
     <title>Mammut</title>
