add basic dm listing support

--- a/src/compose.html
+++ b/src/compose.html
@@ -220,7 +220,7 @@
       document.title = "Mammut - Reply";
       document.getElementById("title").innerHTML = "Compose a reply";
     }
-    const contents = getSearchParam("status_content");
+    const contents = getSearchParam("reply_content");
     console.warn(contents);
 
     if (contents)
