--- a/src/deck-nav.html
+++ b/src/deck-nav.html
@@ -18,6 +18,7 @@
     <style>
       a {
         display: block;
+        white-space: nowrap;
       }
       #searchForm,
       #searchForm * {
@@ -37,6 +38,7 @@
     <a href="/timelines/federated.html" target="content">Federated</a>
     <br />
     <div id="sacrifice"></div>
+    <a href="/conversations.html" target="content">Direct Messages</a>
     <a href="/bookmarks.html" target="content">Bookmarks</a>
     <a
       href="#"
