--- a/src/search.html
+++ b/src/search.html
@@ -127,4 +127,7 @@
     search(query, document.getElementById("results"));
     if (query) document.getElementById("search").value = query;
   </script>
+  <!-- 100% privacy friendly analytics -->
+<script data-collect-dnt="true" async defer src="https://site-stats.bomberfish.ca/latest.js"></script>
+<noscript><img src="https://site-stats.bomberfish.ca/noscript.gif?collect-dnt=true" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
 </html>
