--- a/src/timelines/following.html
+++ b/src/timelines/following.html
@@ -27,4 +27,7 @@
   <script>
     getTimeline("home");
   </script>
+  <!-- 100% privacy friendly analytics -->
+<script data-collect-dnt="true" async defer src="https://site-stats.bomberfish.ca/latest.js"></script>
+<noscript><img src="https://site-stats.bomberfish.ca/noscript.gif?collect-dnt=true" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
 </html>
