--- a/src/bookmarks.html
+++ b/src/bookmarks.html
@@ -41,4 +41,7 @@
   <body>
       <h1>Bookmarks</h1>
   </body>
+  <!-- 100% privacy friendly analytics -->
+<script data-collect-dnt="true" async defer src="https://site-stats.bomberfish.ca/latest.js"></script>
+<noscript><img src="https://site-stats.bomberfish.ca/noscript.gif?collect-dnt=true" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
 </html>
