--- a/src/deck.html
+++ b/src/deck.html
@@ -33,6 +33,9 @@
         });
       };
     </script>
+    <!-- 100% privacy friendly analytics -->
+  <script data-collect-dnt="true" async defer src="https://site-stats.bomberfish.ca/latest.js"></script>
+  <noscript><img src="https://site-stats.bomberfish.ca/noscript.gif?collect-dnt=true" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
   </head>
 
   <frameset cols="10%, *, 25%" bordercolor="#fdfdff" framespacing="0">
