--- a/src/emoji.html
+++ b/src/emoji.html
@@ -48,4 +48,7 @@
   <body>
     <!-- <input type="text" id="emoji-search" placeholder="Search..." /> -->
   </body>
+  <!-- 100% privacy friendly analytics -->
+<script data-collect-dnt="true" async defer src="https://site-stats.bomberfish.ca/latest.js"></script>
+<noscript><img src="https://site-stats.bomberfish.ca/noscript.gif?collect-dnt=true" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
 </html>
