--- a/src/error.html
+++ b/src/error.html
@@ -25,4 +25,7 @@
     console.log(errorMsg);
     document.getElementById("error").innerHTML += errorMsg;
   </script>
+  <!-- 100% privacy friendly analytics -->
+<script data-collect-dnt="true" async defer src="https://site-stats.bomberfish.ca/latest.js"></script>
+<noscript><img src="https://site-stats.bomberfish.ca/noscript.gif?collect-dnt=true" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
 </html>
