--- a/src/index.html
+++ b/src/index.html
@@ -152,5 +152,8 @@
       document.getElementById('video').scrollIntoView({block: 'start', behavior: 'smooth'});
     }
     </script>
+    <!-- 100% privacy friendly analytics -->
+  <script data-collect-dnt="true" async defer src="https://site-stats.bomberfish.ca/latest.js"></script>
+  <noscript><img src="https://site-stats.bomberfish.ca/noscript.gif?collect-dnt=true" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
   </body>
 </html>
