--- a/src/status.html
+++ b/src/status.html
@@ -32,4 +32,7 @@
   <script>
     getPost();
   </script>
+  <!-- 100% privacy friendly analytics -->
+<script data-collect-dnt="true" async defer src="https://site-stats.bomberfish.ca/latest.js"></script>
+<noscript><img src="https://site-stats.bomberfish.ca/noscript.gif?collect-dnt=true" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
 </html>
