Manual token auth

--- a/src/auth.html
+++ b/src/auth.html
@@ -24,7 +24,7 @@
   </head>
 
   <body>
-    <p>Logging in via OAuth...</p>
+    <p>Logging in...</p>
   </body>
   <script type="text/javascript" src="auth.js"></script>
   <script>
