Refractor file structure

--- a/src/auth_redirect.html
+++ b/src/auth_redirect.html
@@ -10,9 +10,9 @@
       content="#121212"
     />
     <meta name="darkreader-lock" />
-    <meta name="color-scheme" content="light dark" />
     <title>Mammut</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/styles/base.css" />
+    <link rel="stylesheet" href="/styles/default.css" />
     <script type="text/javascript" src="/util.js"></script>
   </head>
 
