--- a/src/bookmarks.html
+++ b/src/bookmarks.html
@@ -10,13 +10,13 @@
       content="#121212"
     />
     <meta name="darkreader-lock" />
-    <meta name="color-scheme" content="light dark" />
     <title>Mammut - Notifications</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/styles/base.css" />
+    <link rel="stylesheet" href="/styles/default.css" />
     <script>
       (function () {
         if (typeof window.JSON !== "object") {
-          document.write('<script src="/json2.js"><\/script>');
+          document.write('<script src="/lib/json2.js"><\/script>');
         }
       })();
     </script>
