--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="color-scheme" content="light dark" />
     <meta name="theme-color" content="#ffffff" />
     <meta
       name="theme-color"
@@ -23,11 +22,12 @@
     <meta property="og:image:alt" content="A screenshot of Mammut." />
     <meta property="og:image:type" content="image/jpeg" />
     <title>Mammut</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/styles/base.css" />
+    <link rel="stylesheet" href="/styles/default.css" />
     <script>
       (function () {
         if (typeof window.JSON !== "object") {
-          document.write('<script src="/json2.js"><\/script>');
+          document.write('<script src="/lib/json2.js"><\/script>');
         }
       })();
     </script>
