--- a/src/404.html
+++ b/src/404.html
@@ -10,9 +10,9 @@
       content="#121212"
     />
     <meta name="darkreader-lock" />
-    <meta name="color-scheme" content="light dark" />
     <title>Mammut - Error</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/styles/base.css" />
+    <link rel="stylesheet" href="/styles/default.css" />
   </head>
 
   <body>
