--- a/src/deck-nav.html
+++ b/src/deck-nav.html
@@ -10,9 +10,9 @@
       content="#121212"
     />
     <meta name="darkreader-lock" />
-    <meta name="color-scheme" content="light dark" />
     <title>Mammut - Deck</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/styles/base.css" />
+    <link rel="stylesheet" href="/styles/default.css" />
     <script src="/util.js"></script>
     <script src="/auth.js"></script>
     <style>
