--- a/src/status.html
+++ b/src/status.html
@@ -10,9 +10,9 @@
       content="#121212"
     />
     <meta name="darkreader-lock" />
-    <meta name="color-scheme" content="light dark" />
     <title>Mammut - View Post</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/styles/base.css" />
+    <link rel="stylesheet" href="/styles/default.css" />
     <script>
       (function () {
         if (
@@ -21,7 +21,7 @@
           !window.JSON.parse ||
           !window.JSON.stringify
         ) {
-          document.write('<script src="/json2.js"><\/script>');
+          document.write('<script src="/lib/json2.js"><\/script>');
         }
       })();
     </script>
