--- a/src/deck-nav.html
+++ b/src/deck-nav.html
@@ -33,9 +33,9 @@
     <form id="searchForm">
         <input type="text" id="searchInput" name="q" placeholder="Search..." />
     </form>
-    <a href="/timelines/following.html" target="content">Home</a>
-    <a href="/timelines/local.html" target="content">Local</a>
-    <a href="/timelines/federated.html" target="content">Federated</a>
+    <a href="/feed.html" target="content">Home</a>
+    <a href="/feed.html?view=local" target="content">Local</a>
+    <a href="/feed.html?view=federated" target="content">Federated</a>
     <br />
     <div id="sacrifice"></div>
     <a href="/conversations.html" target="content">Direct Messages</a>
