--- a/src/deck.html
+++ b/src/deck.html
@@ -40,7 +40,7 @@
 
   <frameset cols="10%, *, 25%" bordercolor="#fdfdff" framespacing="0">
     <frame src="/deck-nav.html" id="nav" />
-    <frame src="/timelines/following.html" name="content" id="content" />
+    <frame src="/feed.html" name="content" id="content" />
     <frameset id="rightmost" rows="40%,*" bordercolor="#fdfdff" framespacing="0">
       <frame src="/compose.html" name="compose" id="compose" />
       <frame src="/notifications.html" id="notifications" />
