--- a/src/feed.html
+++ b/src/feed.html
@@ -25,7 +25,21 @@
   <body></body>
   <script src="/timeline.js"></script>
   <script>
-    getTimeline("public?remote=true");
+    function _getParam(name) {
+      var s = window.location.search || '';
+      if (!s) return '';
+      var re = new RegExp('[?&]' + name + '(=([^&#]*)|&|#|$)');
+      var m = re.exec(s);
+      if (!m || !m[2]) return '';
+      try { return decodeURIComponent(m[2].replace(/\+/g, ' ')); } catch (e) { return m[2]; }
+    }
+    var tl = _getParam('view') || '';
+    tl = ('' + tl).toLowerCase();
+    if (tl == "home" || tl == "following") tl = "home";
+    else if (tl == "local") tl = "public?local=true";
+    else if (tl == "federated") tl = "public?remote=true";
+    else tl = "home";
+    getTimeline(tl);
   </script>
   <!-- 100% privacy friendly analytics -->
 <script data-collect-dnt="true" async defer src="https://site-stats.bomberfish.ca/latest.js"></script>
