--- a/src/feed.html
+++ b/src/feed.html
@@ -10,9 +10,9 @@
       content="#121212"
     />
     <meta name="darkreader-lock" />
-    <title>Mammut - Federated</title>
+    <title>Mammut - Home</title>
     <link rel="stylesheet" href="/styles/base.css" />
-    <link rel="stylesheet" href="/styles/default.css" />
+    <link rel="stylesheet" href="/styles/waterloo.css" />
     <script>
       (function () {
         if (typeof window.JSON !== "object") {
