add css from bbui.js

--- a/src/compose.html
+++ b/src/compose.html
@@ -12,7 +12,7 @@
     <meta name="darkreader-lock" />
     <title>Mammut - Compose</title>
     <link rel="stylesheet" href="/styles/base.css" />
-    <link rel="stylesheet" href="/styles/default.css" />
+    <link rel="stylesheet" href="/styles/bbui.css" />
     <script>
       (function () {
         if (typeof window.JSON !== "object") {
