--- a/src/feed.html
+++ b/src/feed.html
@@ -12,7 +12,7 @@
     <meta name="darkreader-lock" />
     <title>Mammut - Home</title>
     <link rel="stylesheet" href="/styles/base.css" />
-    <link rel="stylesheet" href="/styles/waterloo.css" />
+    <link rel="stylesheet" href="/styles/bbui.css" />
     <script>
       (function () {
         if (typeof window.JSON !== "object") {
@@ -22,7 +22,7 @@
     </script>
     <script src="/util.js"></script>
   </head>
-  <body></body>
+  <body class="bb-screen"></body>
   <script src="/timeline.js"></script>
   <script>
     function _getParam(name) {
