--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     <meta property="og:image:type" content="image/jpeg" />
     <title>Mammut</title>
     <link rel="stylesheet" href="/styles/base.css" />
-    <link rel="stylesheet" href="/styles/default.css" />
+    <link rel="stylesheet" href="/styles/bbui.css" />
     <script>
       (function () {
         if (typeof window.JSON !== "object") {
@@ -76,7 +76,7 @@
     </style>
   </head>
   <body>
-    <div id="content">
+    <div id="content" class="bb-screen">
       <h1>Mammut<sup id="ipa">[ˈmamət]</sup></h1>
       <p>
         A <strong>minimalistic</strong>, <strong>lightweight</strong>,
