--- a/src/deck.html
+++ b/src/deck.html
@@ -12,7 +12,7 @@
     <meta name="darkreader-lock" />
     <title>Mammut - Deck</title>
     <link rel="stylesheet" href="/styles/base.css" />
-    <link rel="stylesheet" href="/styles/default.css" />
+    <link rel="stylesheet" href="/styles/bbui.css" />
     <script>
       window.onload = function() {
         if (
