--- a/src/emoji.html
+++ b/src/emoji.html
@@ -11,7 +11,7 @@
     />
     <meta name="darkreader-lock" />
     <link rel="stylesheet" href="/styles/base.css" />
-    <link rel="stylesheet" href="/styles/default.css" />
+    <link rel="stylesheet" href="/styles/bbui.css" />
     <title>Emoji</title>
     <script>
       (function () {
