--- a/src/feed.html
+++ b/src/feed.html
@@ -12,7 +12,7 @@
     <meta name="darkreader-lock" />
     <title>Mammut - Home</title>
     <link rel="stylesheet" href="/styles/base.css" />
-    <link rel="stylesheet" href="/styles/waterloo.css" />
+    <link rel="stylesheet" href="/styles/default.css" />
     <script>
       (function () {
         if (typeof window.JSON !== "object") {
