--- a/src/notifications.html
+++ b/src/notifications.html
@@ -51,32 +51,56 @@
             var notificationItem = document.createElement("li");
             notificationItem.classList = "notificationItem";
             notificationList.appendChild(notificationItem);
+            var notificationTitle = document.createElement("h4");
+            notificationTitle.classList = "notificationTitle";
             var notificationText = document.createElement("p");
             notificationText.classList = "notificationText";
 
-            if (notification.type == "moderation_warning" && notification.moderation_warning) {
-                if (notification.moderation_warning.action = "delete_statuses") {
-                  notificationText.innerHTML = "One or more of your posts have been deleted. ";
+            if (notification.type === "moderation_warning" && notification.moderation_warning) {
+                if (notification.moderation_warning.action === "delete_statuses") {
+                  notificationTitle.textContent = "One or more of your posts have been deleted";
                 } else {
-                  notificationText.innerHTML =
-                    "Moderation warning. ";
+                  notificationTitle.textContent = "Moderation warning";
                 }
                 var info = document.createElement("a");
                 info.href = domain + "/disputes/strikes/" + notification.moderation_warning.id;
                 info.innerHTML = "View details";
                 info.setAttribute("target", "_blank");
-                notificationText.appendChild(info);
+                notificationTitle.appendChild(document.createTextNode(" "));
+                notificationTitle.appendChild(info);
             } else {
-            notificationText.innerHTML =
-              notification.type.charAt(0).toUpperCase() +
-              notification.type.substr(1) +
-              " from ";
               var acct = document.createElement("a");
-            acct.href = "/user.html?id=" + notification.account.id;
-            acct.innerHTML = "@" + notification.account.acct;
-            acct.setAttribute("target", "content");
-            notificationText.appendChild(acct);
+              acct.href = "/user.html?id=" + notification.account.id;
+              acct.innerHTML = "@" + notification.account.acct;
+              acct.setAttribute("target", "content");
+              if (notification.type === "favourite" || 
+                  notification.type === "reblog" ||
+                  notification.type === "mention") {
+                    notificationTitle.appendChild(acct);
+
+                    if (notification.type === "favourite") {
+                      notificationTitle.appendChild(document.createTextNode(" favourited your post"));
+                    } else if (notification.type === "reblog") {
+                      notificationTitle.appendChild(document.createTextNode(" reblogged your post"));
+                    } else if (notification.type === "mention") {
+                      notificationTitle.appendChild(document.createTextNode(" mentioned you in a post"));
+                    }
+
+                  } else {
+                notificationTitle.appendChild(document.createTextNode(
+                  notification.type.charAt(0).toUpperCase() +
+                  notification.type.substr(1) +
+                  " from "
+                ));
+                notificationTitle.appendChild(acct);
+                  }
             }
+
+            if (notification.status) {
+              notificationTitle.innerHTML+= ":"
+            }
+
+            notificationItem.appendChild(notificationTitle);
 
             if (notification.moderation_warning && notification.moderation_warning.text) {
               notificationText.innerHTML +=
@@ -88,7 +112,7 @@
             if (notification.status) {
               if (notification.status.content) {
                 notificationText.innerHTML +=
-                  ":<div class='notification-content'>" +
+                  "<div class='notification-content'>" +
                   notification.status.content +
                   "</div>";
 
@@ -126,6 +150,11 @@
             } else {
               notificationItem.appendChild(notificationText);
             }
+
+            notificationItem.innerHTML +=
+              "<div class='notificationTime subdued' style='margin-top: 10px;'> at " +
+              new Date(notification.created_at).toLocaleString() +
+              "</div>";
           }
         });
       }
